customer sign up and in (#6)
