# backend/internal/app/api/customer/customer.go
@@ -1,15 +1,23 @@
 package customer
 
+import (
+	"context"
+
+	"github.com/Nikita-Kolbin/Maestro/internal/app/model"
+)
+
 type Service interface {
-	Bar()
+	GetJWTSecret() string
+	CreateCustomer(ctx context.Context, alias, email, password string) (int, error)
+	GetCustomerIdByEmailPassword(ctx context.Context, alias, email, password string) (*model.Customer, error)
 }
 
-type Admin struct {
+type Customer struct {
 	srv Service
 }
 
-func NewAPI(srv Service) *Admin {
-	return &Admin{
+func NewAPI(srv Service) *Customer {
+	return &Customer{
 		srv: srv,
 	}
 }
