# backend/internal/app/model/customer.go
@@ -1,36 +1,41 @@
 package model
 
-type AdminEmailPasswordRequest struct {
+type CustomerAliasEmailPasswordRequest struct {
+	Alias    string `json:"alias"`
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
 
-type AdminTokenResponse struct {
+type CustomerTokenResponse struct {
 	Token string `json:"token"`
 }
 
-type Admin struct {
+type Customer struct {
 	Id                   int    `db:"id"`
+	WebsiteAlias         int    `db:"website_alias"`
 	Email                string `db:"email"`
 	FirstName            string `db:"first_name"`
 	LastName             string `db:"last_name"`
 	FatherName           string `db:"father_name"`
-	City                 string `db:"city"`
+	Phone                string `db:"phone"`
 	Telegram             string `db:"telegram"`
-	ImageId              int    `db:"image_id"`
-	EmailNotification    bool   `db:"email_notification"`
+	DeliveryType         string `db:"delivery_type"`
+	PaymentType          string `db:"payment_type"`
 	TelegramNotification bool   `db:"telegram_notification"`
+	EmailNotification    bool   `db:"email_notification"`
 }
 
-type AdminDTO struct {
+type CustomerDTO struct {
 	Id                   int    `json:"id"`
+	WebsiteAlias         int    `json:"website_alias"`
 	Email                string `json:"email"`
 	FirstName            string `json:"first_name"`
 	LastName             string `json:"last_name"`
 	FatherName           string `json:"father_name"`
-	City                 string `json:"city"`
+	Phone                string `json:"phone"`
 	Telegram             string `json:"telegram"`
-	ImageId              int    `json:"image_id"`
+	DeliveryType         string `json:"delivery_type"`
+	PaymentType          string `json:"payment_type"`
 	TelegramNotification bool   `json:"telegram_notification"`
 	EmailNotification    bool   `json:"email_notification"`
 }
